--- a/src/components/product-card/product-card.module.css
+++ b/src/components/product-card/product-card.module.css
@@ -1,4 +1,5 @@
 .product-card {
+    position: relative;
     display: flex;
     flex-direction: column;
     padding: 0.5em;
@@ -17,4 +18,12 @@
 }
 .promo {
     color: hotpink;
+}
+
+.sale-image {
+    position: absolute;
+    right: 0.5em;
+    top: 0.5em;
+    height: 3em;
+    width: 3em;
 }
